tests/type_check/error_span/accumulate_switch_enum_multi.err.expected
error: at 5:13: [TC-SwitchArmUnknownVariant] In function 'f', block 'entry': variant 'Wat' is not part of enum 'Option'
   |
 5 |             switchEnum(o) [Wat: nowhere, None: end]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: at 5:13: [TC-TerminatorUndefinedTarget] In function 'f', block 'entry': switchEnum variant 'Wat' targets undefined block 'nowhere'
   |
 5 |             switchEnum(o) [Wat: nowhere, None: end]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: at 5:13: [VF-SwitchNotExhaustive] In function 'f', block 'entry': switchEnum on 'Option' does not handle variant 'Some'
   |
 5 |             switchEnum(o) [Wat: nowhere, None: end]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
